k8s/ads-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ads-manager
spec:
  selector:
    app: ads-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
